2004-02-20  Paolo Maggi  <paolo.maggi@polito.it>

	* gtksourceview/language-specs/ada.lang:
	* gtksourceview/language-specs/c.lang:
	* gtksourceview/language-specs/cpp.lang:
	* gtksourceview/language-specs/po.lang:
	* gtksourceview/language-specs/python.lang: updated mime-types to work
	with the new shared-mime-info database.

2004-02-13  Paolo Maggi  <paolo.maggi@polito.it>

	* gtksourceview/language-specs/xml.lang:
	* gtksourceview/language-specs/html.lang: fixed bug #120602 -
	highlighting is not correct after an apostrophe. I'm not very happy
	with the fix since it is a sort of workaround, but probably it is the best
	we can do with the current highlight engine.

=== gtksourceview 0.9.0 ===

2004-02-12  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* configure.in: Bump version number to 0.9.0.  Require intltool 0.30.

	* README: 
	* NEWS: Update for new release

2004-02-12  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gtksourceview/language-specs/csharp.lang: Added an escape character
	to properly highlight things like strings-in-strings.

2004-02-11  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gnu-regex/regex.h: Redefine POSIX regular
	expression API entries to avoid symbols clashes in systems which
	implement them but don't have GNU regular expressions (patch by
	Julio M. Merino Vidal, bug #133734).

2004-02-10  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourcebuffer.c (update_syntax_regions):
	Invalidate saved syntax regions information if a change is being
	made in an offset included in them, since we have no way to know
	if syntax regions have been added/removed and later reusing
	those regions can lead to crashes (bug #133901, Dan Williams).

2004-01-21 Alastair McKinstry <mckinstry@computer.org>

	* configure.in: Added Irish locale "ga" to ALL_LINGUAS

2004.01.10  Arafat Medini <lumina@silverpen.de>
                                                                                